--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Matprim</string>
+    <string name="app_name">MatPrim</string>
 
     <string name="facebook_app_id">468214920501582</string>
     <string name="fb_login_protocol_scheme">fb468214920501582</string>
